# barista

./: .bazelrc  angular.json  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/components-e2e/: BUILD.bazel
apps/components-e2e/src/: BUILD.bazel
apps/components-e2e/src/app/: BUILD.bazel
apps/components-e2e/src/components/quick-filter/: BUILD.bazel  quick-filter.po.ts
apps/components-e2e/src/components/table/: table.e2e.ts
libs/barista-components/experimental/quick-filter/: README.md
libs/barista-components/experimental/quick-filter/src/: quick-filter-group.ts  quick-filter.ts
libs/barista-components/radial-chart/src/: radial-chart.ts
tools/schematics/dt-component/: index.ts
tools/schematics/dt-component/files/libs/barista-components/__name@dasherize__/: BUILD.bazel  README.md  barista.json  jest.config.js  jest.config.json
